# chronon

./: .clang-format  .clang-tidy  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  PERF_DELAY_ONE_BROADCAST.md  PERF_EVALUATION.md  PERF_NONCANCELABLE_OUTPORT.md  PERF_TIMESTAMP_SELECTIVE_FLUSH.md  README.md  THIRD_PARTY_NOTICES
bench/: CMakeLists.txt  README.md  bench_boom.cpp  bench_synthetic_framework.cpp  boom_topology.hpp  synthetic_workload.hpp  synthetic_workload.yaml  synthetic_workload_trace.yaml  synthetic_workload_yaml_example.cpp  test_synthetic_determinism.cpp
benchmark/: CMakeLists.txt  README.md  RepresentativeWorkload.hpp  RepresentativeWorkloadCalibration.hpp  RepresentativeWorkloadOptions.hpp  RepresentativeWorkloadReporting.hpp  counter_periodic_benchmark.cpp  delay_one_cycle_queue_benchmark.cpp  direct_spsc_benchmark.cpp  mpsc_lane_frontier_benchmark.cpp  mpsc_sparse_fanin_benchmark.cpp  representative_workload_benchmark.cpp  representative_workload_test.cpp  transparent_broadcast_fusion_benchmark.cpp  typed_mpsc_dispatch_benchmark.cpp  weighted_dependency_reduction_benchmark.cpp
examples/: CMakeLists.txt  bench_message_queue.cpp  bench_parallel_scheduler.cpp  cpu_pipeline.yaml  cpu_pipeline_backend.hpp  cpu_pipeline_common.hpp  cpu_pipeline_example.cpp  cpu_pipeline_frontend.hpp  cpu_pipeline_types.hpp  cpu_pipeline_yaml_example.cpp
src/: CMakeLists.txt
src/chronon/: Chronon.hpp  CpuPause.hpp  Factory.hpp  Observation.hpp  Observe.hpp  Params.hpp  Port.hpp  Sender.hpp  Simulation.hpp  SimulationApp.hpp  TickSimulation.hpp  Tree.hpp  Unit.hpp  Util.hpp
src/observe/: ArgFormat.hpp  BinaryTraceReader.cpp  BinaryTraceReader.hpp  BinaryTraceWriter.cpp  BinaryTraceWriter.hpp  CMakeLists.txt  CategoryPatternMatcher.hpp  CompressionBuffer.cpp  CompressionBuffer.hpp  Counter.cpp  Counter.hpp  CounterRegistry.cpp  CounterRegistry.hpp  CounterSnapshot.hpp  DerivedCounter.cpp  DerivedCounter.hpp  EventCounter.hpp  FixedString.hpp  FormatRegistry.hpp  LocalCounter.cpp  LocalCounter.hpp  LookaheadBuffer.hpp  ObservableUnit.hpp  Observation.hpp  ObservationApi.hpp  ObservationBackend.cpp  ObservationBackend.hpp  ObservationBackendIO.cpp  ObservationContext.cpp  ObservationContext.hpp  ObservationFilter.hpp  ObservationManager.cpp  ObservationManager.hpp  ObservationQueue.hpp  ObservationYAMLConfig.hpp  Observe.hpp  ObserveApi.hpp  PerfettoTraceWriter.cpp  PerfettoTraceWriter.hpp  PipelineApi.hpp  (+17 more)
src/params/: Param.hpp  ParamBase.hpp  Parameter.hpp  ParameterSet.hpp  UnitConstructorMacros.hpp  UnitTypes.hpp  YAMLSerialization.hpp
src/sender/: Sender.hpp
src/sender/app/: SimulationApp.cpp  SimulationApp.hpp
src/sender/config/: SenderConfigLoader.hpp  SenderSimulationBuilder.hpp  SenderUnitConfig.hpp  YAMLOverride.hpp
src/sender/core/: CrashHandler.cpp  CrashHandler.hpp  DynamicWaitPolicy.hpp  Fwd.hpp  PhasedTickableUnit.hpp  TerminationRequest.hpp  TickSimulation.cpp  TickSimulation.hpp  TickSimulationActivity.cpp  TickSimulationConfig.hpp  TickSimulationCycleUtils.hpp  TickSimulationDependencies.cpp  TickSimulationDynamicRebalance.cpp  TickSimulationDynamicRuntime.cpp  TickSimulationDynamicSampling.cpp  TickSimulationParallel.cpp  TickSimulationPartition.cpp  TickSimulationPorts.cpp  TickSimulationTrace.cpp  TickSimulationValidation.cpp  TickableUnit.hpp  Unit.hpp
src/sender/factory/: SenderFactory.hpp
src/sender/port/: Connection.hpp  DelayOneBroadcastFabric.hpp  DelayOneCycleQueueAdapter.hpp  DirectSPSCQueueAdapter.hpp  InPort.hpp  MessageQueue.hpp  MultiProducerQueueAdapter.hpp  OutPort.hpp  Port.hpp  PortDirectory.hpp  PortTransaction.hpp  ReliablePortSender.hpp  SharedBroadcastTransport.hpp
src/sender/schedule/: CostProfileCache.hpp  CycleAnalyzer.hpp  DependencyGraph.hpp  EpochFreeTopologyCost.hpp  PartitionUtils.hpp  PlatformBenchmark.hpp  SchedulerTimelineStyle.hpp  SchedulerTimelineTrace.hpp  SimulatedAnnealingPartitioner.hpp  TickCostProfiler.hpp  WeightedDependencyReduction.hpp  WeightedPartitioner.hpp
src/sender/util/: Graph.hpp  PipelinePhase.hpp  PriorityArbiter.hpp  SingleStageReg.hpp  StageForward.hpp  StagePipeline.hpp  StageReg.hpp  (+2 more)
src/tools/: CMakeLists.txt  README.md  trace_reader.cpp
src/tree/: TreeNode.cpp  TreeNode.hpp
test/: CMakeLists.txt  TestAssertions.hpp  test_params.cpp  test_tree_node.cpp  test_yaml_serialization.cpp
test/observe/: CMakeLists.txt  PftraceTestDecoder.hpp  test_counter_integration.cpp  test_counter_units.cpp  test_counter_updates_disabled.cpp  test_local_counter.cpp  test_observation_hardening.cpp  test_perfetto_trace_writer.cpp  test_runtime_pipeline_api.cpp  test_sparse_counter.cpp  test_spsc_queue.cpp  test_timeline_api.cpp  test_timeline_producer_gate.cpp  test_timeline_string_args.cpp
test/sender/: CMakeLists.txt  EpochFreeDifferentialHarness.hpp  test_config_loader_tuning.cpp  test_connection_admission.cpp  test_connection_header_default.cpp  test_cost_profile_cache.cpp  test_cpu_pipeline_flush_validation.cpp  test_crash_handler.cpp  test_delay_one_broadcast_fabric.cpp  test_dependency_graph.cpp  test_epoch_free_lookahead_determinism.cpp  test_epoch_free_scheduler_equivalence.cpp  test_lazy_wakeup.cpp  test_locality_partition.cpp  test_lockfree_message_queue.cpp  test_lookahead_floor_progress.cpp  test_message_queue.cpp  test_mpsc_deterministic_arbitration_atomic_publish.cpp  test_mpsc_kway_merge.cpp  test_mpsc_mixed_delay_determinism.cpp  test_mpsc_shared_depth.cpp  test_mpsc_weighted_no_message_loss.cpp  test_outport_per_cycle_capacity.cpp  test_port_directory.cpp  test_port_flush_cancel.cpp  test_port_transaction.cpp  test_predecessor_cycle_cache.cpp  test_priority_arbiter.cpp  test_rebalance_calibration.cpp  test_reliable_port_sender.cpp  test_sa_critical_path.cpp  test_sa_integration.cpp  test_sa_partitioner.cpp  test_scheduler_timeline_trace.cpp  test_selective_flush_range.cpp  test_stage_selective_port.cpp  test_termination.cpp  test_thread_queue_hardening.cpp  test_transitive_dependency_pruning.cpp  test_transparent_broadcast_transport.cpp  (+3 more)
(+53 files in other folders)
